Correct Required ENV

--- a/.env.example
+++ b/.env.example
@@ -33,7 +33,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -64,9 +64,16 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-REVERB_APP_ID=
-REVERB_APP_KEY=
-REVERB_APP_SECRET=
+REVERB_APP_ID=919671
+REVERB_APP_KEY=596kw2mmhnya15my2lfa
+REVERB_APP_SECRET=nj8merpsnwhaojxtiqhf
 REVERB_HOST="localhost"
 REVERB_PORT=8080
 REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
+
+BROADCAST_CONNECTION=reverb
